--- a/api/package.json
+++ b/api/package.json
@@ -15,7 +15,9 @@
     "helmet": "^6.0.1",
     "mongoose": "^5.12.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
+    "path": "^0.12.7",
     "prettier": "^2.8.0"
   }
 }
