--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,13 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.1",
+    "framer-motion": "^9.0.7",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.11.2",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "sass": "^1.58.0",
