--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.11.2",
     "react-router-dom": "^6.5.0",
