--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.1",
+    "dayjs": "^1.11.7",
     "framer-motion": "^9.0.7",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
